--- a/Front_End/HTML/Admin/admin-danhgia.html
+++ b/Front_End/HTML/Admin/admin-danhgia.html
@@ -30,7 +30,7 @@
 
 
       <div class="section animate__animated animate__fadeInUp">
-        <h3><i class="fas fa-comments"></i> Danh sách đánh giá</h3>
+        <h3>Danh sách đánh giá</h3>
         <div style="overflow-x: auto;">
           <table class="admin-table">
             <thead>
