--- a/Front_End/HTML/Admin/admin-duyet-chuyen-gia.html
+++ b/Front_End/HTML/Admin/admin-duyet-chuyen-gia.html
@@ -27,7 +27,7 @@
 
     <!-- Main content -->
     <div class="main-content animate__animated animate__fadeIn">
-      <h1><i class="fas fa-user-check"></i> Duyệt yêu cầu nâng cấp thành chuyên gia</h1>
+      <h1>Duyệt yêu cầu nâng cấp thành chuyên gia</h1>
 
       <div class="section animate__animated animate__fadeInUp">
         <h3><i class="fas fa-list"></i> Danh sách yêu cầu</h3>
