--- a/Front_End/HTML/Admin/admin-reports.html
+++ b/Front_End/HTML/Admin/admin-reports.html
@@ -29,7 +29,7 @@
     <div class="main-content animate__animated animate__fadeIn">
 
       <div class="section animate__animated animate__fadeInUp">
-        <h3><i class="fas fa-list-alt"></i> Danh sách tố cáo người dùng / chuyên gia</h3>
+        <h3> Danh sách tố cáo người dùng</h3>
         <div style="overflow-x: auto;">
           <table class="admin-table">
             <thead>
