--- a/Front_End/HTML/Admin/admin-yeu-cau-chuyen-khoan.html
+++ b/Front_End/HTML/Admin/admin-yeu-cau-chuyen-khoan.html
@@ -30,7 +30,7 @@
 
 
       <div class="section animate__animated animate__fadeInUp">
-        <h3><i class="fas fa-clock"></i> Yêu cầu đang chờ duyệt</h3>
+        <h3> Yêu cầu đang chờ duyệt</h3>
         <table class="admin-table">
           <thead>
             <tr>
@@ -49,7 +49,7 @@
       </div>
 
       <div class="section animate__animated animate__fadeInUp">
-        <h3><i class="fas fa-history"></i> Lịch sử chuyển khoản</h3>
+        <h3>Lịch sử chuyển khoản</h3>
         <table class="admin-table">
           <thead>
             <tr>
