--- a/Front_End/HTML/Admin/adminPhuongThuc.html
+++ b/Front_End/HTML/Admin/adminPhuongThuc.html
@@ -29,7 +29,7 @@
     <div class="main-content animate__animated animate__fadeIn">
 
       <div class="section animate__animated animate__fadeInUp">
-        <h3><i class="fas fa-plus-circle"></i> Thêm phương thức mới</h3>
+        <h3> Thêm phương thức mới</h3>
         <form id="addForm" style="display: flex; flex-wrap: wrap; gap: 10px; align-items: center; margin-bottom: 20px;">
           <input type="text" id="ten" placeholder="Tên phương thức" required />
           <input type="text" id="moTa" placeholder="Mô tả (tùy chọn)" />
