--- a/Front_End/HTML/Index.html
+++ b/Front_End/HTML/Index.html
@@ -17,7 +17,7 @@
   
       <nav class="nav">
       <a href="Index.html" class="active">Trang chủ</a>
-      <a href="https://www.facebook.com/groups/1717452315821331">Cộng Đồng</a>
+      <a href="https://www.facebook.com/groups/1385192975848986/?hoisted_section_header_type=recently_seen&multi_permalinks=1386106799090937">Cộng Đồng</a>
       <a href="../HTML/NguoiDung/search-expert.html">Tư vấn</a>
       <a href="../HTML/NguoiDung/tin-nhan-user.html">Nhắn tin</a>
       <a href="../HTML/NguoiDung/lich-hen-user.html">Lịch hẹn</a>
