Bỏ code thừa ,chưa sử dụng

--- a/Front_End/HTML/Admin/admin-dashboard.html
+++ b/Front_End/HTML/Admin/admin-dashboard.html
@@ -12,9 +12,7 @@
 
 </head>
 <body>
-  <div class="admin-wrapper"> <!-- THÊM THẺ BAO -->
-
-    <!-- Sidebar -->
+  <div class="admin-wrapper">
     <div class="sidebar">
       <h2>Admin Dashboard</h2>
       <a href="admin-dashboard.html" class="active">Tổng quan</a>
@@ -29,7 +27,6 @@
       <a href="#" id="logoutLink" style="color: red;">Đăng xuất</a>
     </div>
 
-    <!-- Main content -->
     <div class="main-content">
       <h1>Thống kê tổng quan</h1>
 
@@ -76,8 +73,7 @@
         <canvas id="thongKeBieuDo" height="60"></canvas>
       </div>
     </div>
-
-  </div> <!-- HẾT admin-wrapper -->
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="../../JS/Admin/admin-dashboard.js"></script>
